Fix center alignment of book title.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -209,4 +209,8 @@ pre {
  */
 .book-title {
     padding: 25px;
+    text-align: center;
+}
+.site-title {
+    width: 100%;
 }
